# C-For-FutuOpenD

./: .gitignore  CMakeLists.txt  FutuOpenDClient.sln  README.md  config.txt  hkStock.txt  usStock.txt
3rd/Include/google/protobuf/stubs/: bytestream.h
FutuOpenDClient/: Common.cpp  Common.h  FutuOpenDClient.vcxproj  FutuOpenDClient.vcxproj.filters  NetCenter.cpp  NetCenter.h  QuoteHandler.cpp  QuoteHandler.h  SHA1.cpp  SHA1.h  TcpConnect.cpp  TcpConnect.h  main.cpp
FutuOpenDClient/pb/: Common.pb.cc  Common.pb.h  GetGlobalState.pb.cc  GetGlobalState.pb.h  GetGlobalState.proto  HeartBeat.pb.cc  HeartBeat.pb.h  InitConnect.pb.cc  InitConnect.pb.h  KeepAlive.pb.cc  KeepAlive.pb.h  Notify.pb.cc  Notify.pb.h  Qot_Common.pb.cc  Qot_Common.pb.h  Qot_Common.proto  Qot_GetBasicQot.pb.cc  Qot_GetBasicQot.pb.h  Qot_GetBroker.pb.cc  Qot_GetBroker.pb.h  Qot_GetHistoryKL.pb.cc  Qot_GetHistoryKL.pb.h  Qot_GetHistoryKLPoints.pb.cc  Qot_GetHistoryKLPoints.pb.h  Qot_GetKL.pb.cc  Qot_GetKL.pb.h  Qot_GetOrderBook.pb.cc  Qot_GetOrderBook.pb.h  Qot_GetOrderDetail.pb.cc  Qot_GetOrderDetail.pb.h  Qot_GetOrderDetail.proto  Qot_GetPlateSecurity.pb.cc  Qot_GetPlateSecurity.pb.h  Qot_GetPlateSet.pb.cc  Qot_GetPlateSet.pb.h  Qot_GetRT.pb.cc  Qot_GetRT.pb.h  Qot_GetReference.pb.cc  Qot_GetReference.pb.h  Qot_GetRehab.pb.cc  (+68 more)
